crates/aranya-policy-compiler/tests/data/persistence/persistent_publishes_ephemeral_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: ephemeral command
   |
10 |     publish Cmd {}
   |             ^^^^^^ expected `persistent command` but found `ephemeral command`
